--- a/RL/RL.vcxproj
+++ b/RL/RL.vcxproj
@@ -133,12 +133,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="textbox.cpp" />
     <ClCompile Include="tile.cpp" />
     <ClCompile Include="tileHandler.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="globals.h" />
+    <ClInclude Include="popup.h" />
+    <ClInclude Include="textbox.h" />
     <ClInclude Include="tile.h" />
     <ClInclude Include="tileHandler.h" />
     <ClInclude Include="window.h" />
