--- a/RL/RL.vcxproj.filters
+++ b/RL/RL.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="level.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="colors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
