--- a/RL/RL.vcxproj
+++ b/RL/RL.vcxproj
@@ -154,6 +154,9 @@
     <ClInclude Include="voxel.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="BearLibTerminal.ini" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
