--- a/RL/BearLibTerminal.ini
+++ b/RL/BearLibTerminal.ini
@@ -2,3 +2,13 @@
 log: file=bt.log, level=trace
 window.title='3'
 window.fullscreen='true'
+# default font
+font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=nearest, codepage=437
+# katakana
+0x30a0: fonts/bitmap/7tkji-katakana.png, resize=32x32, resize-filter=nearest, size=8x8
+# misc symbols
+0x2600: fonts/bitmap/7tkji-misc-sym.png, resize=32x32, resize-filter=nearest, size=8x8
+#smallcaps. this first loads the default font and then overwrites the lowercase letters with smcp variants
+# so that we can still use mixed case and punctiation without constant tag switches
+sc font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=nearest, codepage=437
+sc 0x61: fonts/bitmap/7tkji-sc.png, resize=32x32, resize-filter=nearest, size=8x8
