--- a/RL/BearLibTerminal.ini
+++ b/RL/BearLibTerminal.ini
@@ -1,7 +1,9 @@
 [BearLibTerminal]
+#logging
 log: file=bt.log, level=trace
-window.title='3'
-window.fullscreen='true'
+#window. size is declared in code atm
+window.title=3
+window.fullscreen=true
 # default font
 font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=nearest, codepage=437
 # katakana
@@ -12,3 +14,5 @@ font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=neares
 # so that we can still use mixed case and punctiation without constant tag switches
 sc font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=nearest, codepage=437
 sc 0x61: fonts/bitmap/7tkji-sc.png, resize=32x32, resize-filter=nearest, size=8x8
+#enable Vsync
+output.vsync=true
