disable fullscreen buttons

--- a/RL/BearLibTerminal.ini
+++ b/RL/BearLibTerminal.ini
@@ -16,3 +16,5 @@ sc font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=nea
 sc 0x61: fonts/bitmap/7tkji-sc.png, resize=32x32, resize-filter=nearest, size=8x8
 #enable Vsync
 output.vsync=true
+#disable fullscreen and zoom buttons
+input.alt-functions=false
