import fonts with transarency

--- a/RL/BearLibTerminal.ini
+++ b/RL/BearLibTerminal.ini
@@ -7,13 +7,13 @@ window.fullscreen=true
 # default font
 font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=nearest, codepage=437
 # katakana
-0x30a0: fonts/bitmap/7tkji-katakana.png, resize=32x32, resize-filter=nearest, size=8x8
+0x30a0: fonts/bitmap/7tkji-katakana.png, resize=32x32, resize-filter=nearest, size=8x8, transparent=0x0
 # misc symbols
-0x2600: fonts/bitmap/7tkji-misc-sym.png, resize=32x32, resize-filter=nearest, size=8x8
+0x2600: fonts/bitmap/7tkji-misc-sym.png, resize=32x32, resize-filter=nearest, size=8x8, transparent=0x0
 #smallcaps. this first loads the default font and then overwrites the lowercase letters with smcp variants
 # so that we can still use mixed case and punctiation without constant tag switches
 sc font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=nearest, codepage=437
-sc 0x61: fonts/bitmap/7tkji-sc.png, resize=32x32, resize-filter=nearest, size=8x8
+sc 0x61: fonts/bitmap/7tkji-sc.png, resize=32x32, resize-filter=nearest, size=8x8, transparent=0x0
 #enable Vsync
 output.vsync=true
 #disable fullscreen and zoom buttons
