add sc,pc, and mouse

--- a/RL/BearLibTerminal.ini
+++ b/RL/BearLibTerminal.ini
@@ -1,7 +1,7 @@
 [BearLibTerminal]
 #logging
 log: file=bt.log, level=trace
-#window. size is declared in code atm
+#window size is declared in code atm
 window.title=3
 window.fullscreen=true
 # default font
@@ -14,7 +14,15 @@ font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=neares
 # so that we can still use mixed case and punctiation without constant tag switches
 sc font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=nearest, codepage=437
 sc 0x61: fonts/bitmap/7tkji-sc.png, resize=32x32, resize-filter=nearest, size=8x8, transparent=0x0
+#petite caps. these are the same height as lowercase characters, and as such will look better inline
+pc font: fonts/bitmap/7tkji-basic.png, size=8x8, resize=32x32, resize-filter=nearest, codepage=437
+pc 0x61: fonts/bitmap/7tkji-pc.png, resize=32x32, resize-filter=nearest, size=8x8, transparent=0x0
+#"personal use" box geometric shapes and so on
+0xE000:  fonts/bitmap/7tkji-geometry.png, resize=32x32, resize-filter=nearest, size=8x8, transparent=0x0
 #enable Vsync
 output.vsync=true
 #disable fullscreen and zoom buttons
 input.alt-functions=false
+#enable mouse input and hide system cursor
+input.filter=[keyboard+,mouse+]
+input.mouse-cursor=false
