--- a/RL/RL.vcxproj
+++ b/RL/RL.vcxproj
@@ -138,12 +138,14 @@
     <ClCompile Include="textbox.cpp" />
     <ClCompile Include="tile.cpp" />
     <ClCompile Include="tileHandler.cpp" />
+    <ClCompile Include="uibox.cpp" />
     <ClCompile Include="voxel.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BLTWindow.h" />
     <ClInclude Include="colors.h" />
+    <ClInclude Include="geometric character points.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="level.h" />
@@ -151,6 +153,7 @@
     <ClInclude Include="textbox.h" />
     <ClInclude Include="tile.h" />
     <ClInclude Include="tileHandler.h" />
+    <ClInclude Include="uibox.h" />
     <ClInclude Include="voxel.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
