drawable vector of tiles

--- a/RL/RL.vcxproj
+++ b/RL/RL.vcxproj
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="editor.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="tile.cpp" />
@@ -140,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="colors.h" />
+    <ClInclude Include="editor.h" />
     <ClInclude Include="geometric character points.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="input.h" />
