--- a/RL/RL.vcxproj
+++ b/RL/RL.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="editor.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="picker.cpp" />
     <ClCompile Include="tile.cpp" />
     <ClCompile Include="uibox.cpp" />
     <ClCompile Include="window.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="globals.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="level.h" />
+    <ClInclude Include="picker.h" />
     <ClInclude Include="tile.h" />
     <ClInclude Include="uibox.h" />
     <ClInclude Include="window.h" />
