show cursor again for now

--- a/RL/BearLibTerminal.ini
+++ b/RL/BearLibTerminal.ini
@@ -25,4 +25,4 @@ output.vsync=true
 input.alt-functions=false
 #enable mouse input and hide system cursor
 input.filter=[keyboard+,mouse+]
-input.mouse-cursor=false
+#input.mouse-cursor=false
