minor color related adjustments

--- a/RL/RL.vcxproj
+++ b/RL/RL.vcxproj
@@ -133,6 +133,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="editor.cpp" />
+    <ClCompile Include="fileDialog.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="picker.cpp" />
@@ -143,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="colors.h" />
     <ClInclude Include="editor.h" />
+    <ClInclude Include="fileDialog.h" />
     <ClInclude Include="geometric character points.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="input.h" />
