--- a/RL/RL.vcxproj.filters
+++ b/RL/RL.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="picker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="fileDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="window.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="picker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fileDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
