--- a/RL/BearLibTerminal.ini
+++ b/RL/BearLibTerminal.ini
@@ -1,4 +1,4 @@
-[BearLibTerminal]
+﻿[BearLibTerminal]
 #logging
 log: file=bt.log, level=trace
 #window size is declared in code atm
@@ -6,7 +6,9 @@ window.title=3
 window.fullscreen=true
 
 # default font
-font: fonts/bitmap/7tkji-wide-0x0.png, size=8x8, resize=32x32, resize-filter=nearest
+font: fonts/bitmap/7tkji-wide-0x0.png, size=8x8, resize=32x32, resize-filter=nearest, transparent=0x0
+# ı
+0x0131: fonts/bitmap/dotless-i.png, size=8x8, resize=32x32, resize-filter=nearest, transparent=0x0
 #greek and coptic
 0x0370: fonts/bitmap/7tkji-greek-and-coptic.png, resize=32x32, resize-filter=nearest, size=8x8, transparent=0x0
 # misc symbols
