--- a/RL/RL.vcxproj.filters
+++ b/RL/RL.vcxproj.filters
@@ -74,6 +74,15 @@
     <ClInclude Include="fileDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tileChangeCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="command.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="commandHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="BearLibTerminal.ini">
