--- a/RL/BearLibTerminal.ini
+++ b/RL/BearLibTerminal.ini
@@ -2,7 +2,7 @@
 #logging
 log: file=bt.log, level=trace
 #window size is declared in code atm
-window.title=3
+window.title="Impartio Aeris"
 window.fullscreen=true
 
 # default font
